# shared_library_test

./: CMakeLists.txt  README.md  cmake_clear.sh
include/: math_fun.h
src/: dyn_math.c  main.c
